[package]
name = "rustic-qt-frontend"
version = "0.1.0"
authors = ["Max Jöhnk <maxjoehnk@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/rustic-music-player/qt-frontend"
homepage = "https://github.com/rustic-music-player/qt-frontend"

[dependencies]

[dependencies.qmetaobject]
path = "../qmetaobject-rs/qmetaobject" # TODO: Install from git

[dependencies.rustic-core]
git = "https://github.com/rustic-music-player/core"
